// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Panel Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel TextAlignedVertical smoke-test 1`] = `
<div data-test-block="true">
  <div>
    <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicIcon_1h73c_37  undefined">
      <div class="_panelGraphic_1h73c_50">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
      </div>
      <div class="_panelArticle_1h73c_70">
        <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 ">
          En overskrift
        </h3>
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </div>
    </div>
    <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
      <div class="_panelArticle_1h73c_70">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </div>
    </div>
  </div>
  <div>
    <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicIcon_1h73c_37  undefined">
      <div class="_panelGraphic_1h73c_50">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
      </div>
      <div class="_panelArticle_1h73c_70">
        <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 ">
          En overskrift
        </h3>
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </div>
    </div>
    <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
      <div class="_panelArticle_1h73c_70">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel TextShortAndIcon smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicIcon_1h73c_37  undefined">
    <div class="_panelGraphic_1h73c_50">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_1h73c_70">
      <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 ">
        Kort tittel
      </h3>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Kort test ...
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel VariantFilled smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlId"
       class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined dummyClassname"
       lang="nb"
       data-testid="123ID"
  >
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithCanManuallySetTitleFocus play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 "
          tabindex="-1"
      >
        Tittel i Panel
      </h3>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithClassNameOverridesPanelWidthAndPadding smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined dummyPanelOverridesWidthAndPadding">
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithColorAndVariant smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      color: ochre
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_forest_1h73c_84 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      color: forest
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_burgundy_1h73c_88 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      color: burgundy
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_denim_1h73c_92 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      color: denim
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_graphite_1h73c_96 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      color: graphite
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      color: ochre
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_forest_1h73c_84 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      color: forest
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_burgundy_1h73c_88 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      color: burgundy
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_denim_1h73c_92 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      color: denim
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_graphite_1h73c_96 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      color: graphite
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithHideGraphicMobileAndIcon smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicIcon_1h73c_37 _panel_graphicIconHide_1h73c_41 undefined">
    <div class="_panelGraphic_1h73c_50 _panelGraphicHide_1h73c_56">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicIcon_1h73c_37 _panel_graphicIconHide_1h73c_41 undefined">
    <div class="_panelGraphic_1h73c_50 _panelGraphicHide_1h73c_56">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithHideGraphicMobileAndIconDesktop smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicIcon_1h73c_37 _panel_graphicIconHide_1h73c_41 undefined">
    <div class="_panelGraphic_1h73c_50 _panelGraphicHide_1h73c_56">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicIcon_1h73c_37 _panel_graphicIconHide_1h73c_41 undefined">
    <div class="_panelGraphic_1h73c_50 _panelGraphicHide_1h73c_56">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithHideGraphicMobileAndImage smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicImage_1h73c_32 undefined">
    <div class="_panelGraphic_1h73c_50 _panelGraphicHide_1h73c_56">
      <img src="[REMOVED]"
           alt
           class="_panelImage_1h73c_76"
      >
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicImage_1h73c_32 undefined">
    <div class="_panelGraphic_1h73c_50 _panelGraphicHide_1h73c_56">
      <img src="[REMOVED]"
           alt
           class="_panelImage_1h73c_76"
      >
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithHideGraphicMobileAndImageDesktop smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicImage_1h73c_32 undefined">
    <div class="_panelGraphic_1h73c_50 _panelGraphicHide_1h73c_56">
      <img src="[REMOVED]"
           alt
           class="_panelImage_1h73c_76"
      >
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicImage_1h73c_32 undefined">
    <div class="_panelGraphic_1h73c_50 _panelGraphicHide_1h73c_56">
      <img src="[REMOVED]"
           alt
           class="_panelImage_1h73c_76"
      >
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithHideSubtitle play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <h4 class="_heading_12p5o_1 _heading_level5_12p5o_47 _heading_hasSpacingExtraSmall_12p5o_51 _srOnly_1h73c_171">
        Det er en undertittel
      </h4>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithHideTitle play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _srOnly_1h73c_171">
        Det er en tittel
      </h3>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithIcon play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicIcon_1h73c_37  undefined">
    <div class="_panelGraphic_1h73c_50">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicIcon_1h73c_37  undefined">
    <div class="_panelGraphic_1h73c_50">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithIconMobile smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicIcon_1h73c_37  undefined">
    <div class="_panelGraphic_1h73c_50">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicIcon_1h73c_37  undefined">
    <div class="_panelGraphic_1h73c_50">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithImage play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicImage_1h73c_32 undefined">
    <div class="_panelGraphic_1h73c_50">
      <img src="[REMOVED]"
           alt
           class="_panelImage_1h73c_76"
      >
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicImage_1h73c_32 undefined">
    <div class="_panelGraphic_1h73c_50">
      <img src="[REMOVED]"
           alt
           class="_panelImage_1h73c_76"
      >
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithImageMobile smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicImage_1h73c_32 undefined">
    <div class="_panelGraphic_1h73c_50">
      <img src="[REMOVED]"
           alt
           class="_panelImage_1h73c_76"
      >
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicImage_1h73c_32 undefined">
    <div class="_panelGraphic_1h73c_50">
      <img src="[REMOVED]"
           alt
           class="_panelImage_1h73c_76"
      >
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithImageSourceAltText play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicImage_1h73c_32 undefined">
    <div class="_panelGraphic_1h73c_50">
      <img src="[REMOVED]"
           alt="Bonde med ku"
           class="_panelImage_1h73c_76"
      >
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118 _panel_graphicImage_1h73c_32 undefined">
    <div class="_panelGraphic_1h73c_50">
      <img src="[REMOVED]"
           alt="Bonde med ku"
           class="_panelImage_1h73c_76"
      >
    </div>
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithPadding smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingS_1h73c_100  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <div>
        padding: s
      </div>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingS_1h73c_100  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <div>
        padding: s
      </div>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingM_1h73c_103  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <div>
        padding: m
      </div>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingM_1h73c_103  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <div>
        padding: m
      </div>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingL_1h73c_106  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <div>
        padding: l
      </div>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingL_1h73c_106  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <div>
        padding: l
      </div>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <div>
        padding: xl
      </div>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <div>
        padding: xl
      </div>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXXL_1h73c_112  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <div>
        padding: xxl
      </div>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXXL_1h73c_112  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <div>
        padding: xxl
      </div>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingMEGA_1h73c_115  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <div>
        padding: mega
      </div>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingMEGA_1h73c_115  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <div>
        padding: mega
      </div>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithPanelHeadingRef play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 "
          tabindex="-1"
          id="dummyIdForwardedFromRef"
      >
        Panel Header skal kunne få fokus
      </h3>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Sett fokus på Panel Header
    </span>
  </button>
</div>
`;

exports[`Tester/Panel WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined"
       id="dummyIdForwardedFromRef"
  >
    <div class="_panelArticle_1h73c_70">
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithResponsivePadding smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109 _panelResponsive_1h73c_142 _panel_spacingXXS_1h73c_118  dummyPanelPaddingResponsive">
    <div class="_panelArticle_1h73c_70">
      <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 ">
        Med responsive padding
      </h3>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Her har vi satt hasResponsivePadding:true og endret følgende tokens for responsive visning. 
      --pandel-padding-xs, --pandel-padding-m og --pandel-padding-l
      </p>
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 ">
        Med default padding
      </h3>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Denne Panel bruker standard 'padding'-prop for å kontrollere padding.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      spacing: xxs
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXS_1h73c_121  undefined">
    <div class="_panelArticle_1h73c_70">
      spacing: xs
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingS_1h73c_124  undefined">
    <div class="_panelArticle_1h73c_70">
      spacing: s
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingM_1h73c_127  undefined">
    <div class="_panelArticle_1h73c_70">
      spacing: m
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingL_1h73c_130  undefined">
    <div class="_panelArticle_1h73c_70">
      spacing: l
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXL_1h73c_133  undefined">
    <div class="_panelArticle_1h73c_70">
      spacing: xl
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXL_1h73c_136  undefined">
    <div class="_panelArticle_1h73c_70">
      spacing: xxl
    </div>
  </div>
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingMEGA_1h73c_139  undefined">
    <div class="_panelArticle_1h73c_70">
      spacing: mega
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithSubtitle play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <h4 class="_heading_12p5o_1 _heading_level5_12p5o_47 _heading_hasSpacingExtraSmall_12p5o_51 ">
        Det er en undertittel
      </h4>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithSubtitleAs play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <h2 class="_heading_12p5o_1 _heading_level5_12p5o_47 _heading_hasSpacingExtraSmall_12p5o_51 ">
        Det er en undertittel med valgt heading nivå
      </h2>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithTitle play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 ">
        Det er en tittel
      </h3>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithTitleAs play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_1h73c_5 _panel_outline_1h73c_21 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined">
    <div class="_panelArticle_1h73c_70">
      <h1 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 ">
        Det er en tittel
      </h1>
      <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;
